cambiando color al texto 'proximamente'

--- a/src/sections/PrincipalDate.astro
+++ b/src/sections/PrincipalDate.astro
@@ -46,7 +46,7 @@ import MapMarkerIcon from "@/icons/map-marker.astro";
       </a>
       <span class="text-accent">Próximamente</span>
     </div>
-    <div>
+    <div class="mx-auto w-[90%] xs:w-80">
       <CalendarButton />
     </div>
   </footer>
