--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,7 @@ const { title } = Astro.props;
     --color-secondary: #333;
 
     --background-color: #101010;
+    --color-accent: #d5ff00;
     --background-twitch: var(--color-twitch-ice);
 
     --color-twitch: #9146ff;
