creacion de seccion patrocinadores e importancion de las imagenes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from "@/sections/Hero.astro";
 import CountDown from "@/sections/CountDown.astro";
 import Info from "@/sections/Info.astro";
 import PrincipalDate from "@/sections/PrincipalDate.astro";
+import Sponsors from "@/sections/Sponsors.astro";
 import Footer from "@/sections/Footer.astro";
 ---
 
@@ -12,6 +13,7 @@ import Footer from "@/sections/Footer.astro";
   <Hero />
   <main>
     <PrincipalDate />
+    <Sponsors />
     <!-- <Info />
     <CountDown /> -->
   </main>
