ajustes en el subtitulo

--- a/src/sections/Sponsors.astro
+++ b/src/sections/Sponsors.astro
@@ -50,7 +50,7 @@ const SPONSORS = [
 
 <section class="my-40">
   <h3 class="text-center text-2xl font-semibold uppercase text-white">
-    Los Patrocinadores
+    Patrocinadores
   </h3>
   <p class="mt-4 text-center text-xl text-neutral-300">
     La Velada puede llevarse a cabo gracias a la colaboración de...
