--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource-variable/jost";
 import Noise from "@/components/Noise.astro";
+import ButtonUp from "@/components/ButtonUp.astro";
 
 interface Props {
   title: string;
@@ -32,6 +33,7 @@ const { title } = Astro.props;
     >
       <slot />
     </div>
+    <ButtonUp />
   </body>
 </html>
 <style is:global>
@@ -62,5 +64,26 @@ const { title } = Astro.props;
     html {
       scroll-behavior: smooth;
     }
+  }
+
+  /* estilos al scroll */
+  ::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: theme("colors.primary");
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: var(--background-image);
+  }
+
+  ::-webkit-scrollbar-corner {
+    background: var(--background-image);
   }
 </style>
