--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,31 +1,44 @@
 ---
+import AnimatedX from "@/components/AnimatedX.astro";
 import HeroLogo from "@/components/HeroLogo.astro";
 ---
 
 <section class="flex flex-col place-items-center gap-4 lg:gap-9">
-  <h1 class="sr-only">Presentación de la Velada del Año IV</h1>
+  <h1 class="sr-only bg-black/30">Presentación de la Velada del Año IV</h1>
   <a
-    class="-rotate-6 text-2xl text-white underline-offset-8 transition hover:scale-110 hover:underline md:text-4xl"
+    class="relative -rotate-6 text-2xl text-white underline-offset-8 transition hover:scale-110 md:text-4xl"
     href="https://www.twitch.tv/ibai"
     target="_blank"
     rel="noopener"
     title="Enlace al canal de Twitch de Ibai Llanos"
     aria-label="Enlace al canal de Twitch de Ibai Llanos"
-    >twitch.tv/ibai
+    ><span class="relative">twitch.tv/ibai</span>
   </a>
   <div class="relative">
-    <img
-      class="absolute inset-0 -z-10 m-auto block h-auto w-[400px] scale-150"
-      src="drawn-x-logo.webp"
-      alt="Logo dibujado a mano de La Velada del Año IV"
-    />
+    <AnimatedX />
     <div
       class="absolute inset-0 -z-10 m-auto w-full rounded-full bg-black opacity-70 blur-2xl md:size-[400px]"
     >
     </div>
     <HeroLogo class="h-auto w-[300px] text-primary md:w-[500px]" />
-    <HeroLogo
-      class="absolute inset-0 -z-10 h-auto w-[300px] text-[#1f1ffaa]/70 blur md:w-[500px]"
-    />
   </div>
 </section>
+
+<style>
+	a::before {
+		content: "";
+		position: absolute;
+		left: 0;
+		bottom: -2px;
+		width: 100%;
+		height: 3px;
+		background-color: white;
+		transform-origin: left;
+		transform: scaleX(0);
+		transition: transform 0.2s ease-in-out;
+	}
+
+	a:hover::before {
+		transform: scaleX(1);
+	}
+</style>
