--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,10 @@ import Footer from "@/sections/Footer.astro";
   <Hero />
   <main>
     <PrincipalDate />
+    <Info />
     <PresentationVideo />
     <Sponsors />
-    <!-- <Info />
-    <CountDown /> -->
+    <!-- <CountDown /> -->
   </main>
   <Footer />
 </Layout>
