--- a/src/sections/Info.astro
+++ b/src/sections/Info.astro
@@ -1,74 +1,51 @@
-<section class="flex flex-col gap-y-10 my-32 font-medium text-primary">
-  <div class="flex justify-center items-center">
-    <a
-      href="https://twitch.tv/ibai"
-      target="_blank"
-      rel="nofollow noopener"
-      class="hover:scale-125 hover:opacity-70 transition inline-block"
-    >
-      <svg
-        class="logo-twitch text-primary"
-        xmlns="http://www.w3.org/2000/svg"
-        width="78"
-        height="91"
-        fill="none"
-        viewBox="0 0 78 91"
-        ><path
-          fill="currentColor"
-          d="M16.6001.600098.600098 16.6001v57.6H19.8001v16l16-16h12.8l28.8-28.8V.600098h-60.8Z"
-        ></path><path
-          fill="#fff"
-          d="m58.2003 55 12.8-12.8V7h-51.2v48h12.8v12.8l12.8-12.8h12.8Z"
-        ></path><path
-          fill="currentColor"
-          d="M39 19.8h6.4V39H39V19.8Zm22.4 0V39H55V19.8h6.4Z"></path>
-      </svg>
-    </a>
-  </div>
+---
+import TwitchLogo from "@/components/TwitchLogo.astro";
+import Typography from "@/components/Typography.astro";
+---
 
-  <div
-    class="grid gap-x-10 text-center uppercase [grid-template-columns:1fr] md:grid-cols-[repeat(auto-fit,_minmax(150px,_1fr))] lg:[grid-template-columns:1fr_1.5fr_1fr]"
+<section
+  class="group mb-32 mt-80 flex w-full flex-col items-center justify-center px-20 font-medium text-primary"
+  aria-label="descripción del evento"
+>
+  <hr
+    class="-z-10 -mt-12 h-[2px] min-w-[20rem] border-t-0 bg-transparent bg-gradient-to-r from-transparent via-white to-transparent sm:w-full sm:max-w-64 md:max-w-lg"
+  />
+  <a
+    href="https://twitch.tv/ibai"
+    target="_blank"
+    rel="nofollow noopener"
+    class="mx-auto -mt-11 mb-8 duration-200 hover:scale-110 motion-safe:transition"
+    aria-hidden="true"
+    tabindex="-1"
   >
-    <article
-      class="order-2 flex items-center justify-center border-y-2 border-primary px-10 py-10 text-center text-xl md:order-none md:flex-grow md:px-0 md:py-12 lg:py-20"
-    >
-      <h5>Presentación, Pesaje, Entrevista y Cara a Cara</h5>
-    </article>
+    <div class="w-14 md:w-20">
+      <TwitchLogo />
+    </div>
+  </a>
 
-    <article
-      class="order-1 flex items-center justify-center border-t-2 border-primary px-10 py-10 text-3xl md:order-none md:flex-1 md:border-y-2 md:px-0 md:py-12 lg:px-0 lg:py-20 lg:text-4xl"
+  <a
+    class="flex flex-col items-center transition duration-200 hover:scale-110"
+    href="https://www.twitch.tv/ibai"
+    target="_blank"
+    rel="noopener"
+    title="Enlace al canal de Twitch de Ibai Llanos"
+    aria-label="Enlace al canal de Twitch de Ibai Llanos"
+  >
+    <span
+      class="-rotate-6 skew-x-6 text-center text-xl text-white underline-offset-8 transition sm:text-3xl md:text-5xl"
+      >en directo
+    </span>
+    <Typography
+      as="h2"
+      variant="bigger"
+      color="primary"
+      class:list={"-mt-2 text-wrap text-center"}
+      class="flex justify-center transition"
     >
-      <h4>
-        <a
-          class="inline-block hover:scale-110 hover:text-twitch transition"
-          href="https://twitch.tv/ibai"
-          target="_blank"
-          rel="nofollow noopener"
-          >Síguelo en directo twitch.tv/ibai
-        </a>
-      </h4>
-    </article>
-
-    <article
-      class="order-3 flex items-center justify-center border-b-2 border-primary px-10 py-10 text-xl sm:py-12 md:order-none md:border-y-2 md:px-0 md:py-12 lg:py-20"
-    >
-      <h5>Con la presencia de los boxeadores y las boxeadoras</h5>
-    </article>
-  </div>
+      twitch.tv/ibai
+    </Typography>
+  </a>
+  <hr
+    class="my-12 h-[2px] min-w-[20rem] border-t-0 bg-transparent bg-gradient-to-r from-transparent via-white to-transparent sm:w-full sm:max-w-64 md:max-w-lg"
+  />
 </section>
-
-<style>
-  svg {
-    view-timeline-name: --logo-twitch;
-    view-timeline-axis: block;
-
-    animation-timeline: --logo-twitch;
-    animation-name: show;
-  }
-
-  @keyframes show {
-    to {
-      @apply text-twitch;
-    }
-  }
-</style>
