--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -1,32 +1,58 @@
-<footer
-  class="mt-20 w-full border-primary border-t-2 flex flex-col md:flex-row justify-center items-center md:justify-between pt-6 pb-20 gap-y-10"
->
-  <span class="text-primary text-center">
-    © 2024 La Velada del Año <span aria-hidden="true" class="hidden md:inline"
-      >|</span
-    ><br aria-hidden="true" class="block md:hidden" /> Todos los derechos reservados.
-  </span>
+---
+import Typography from "@/components/Typography.astro";
+import InstagramIcon from "@/icons/instagram.astro";
+import XIcon from "@/icons/x.astro";
+---
 
-  <ul class="flex flex-row gap-x-6 items-center">
-    <li>
-      <a
-        target="_blank"
-        rel="noopener"
-        href="https://www.instagram.com/infolavelada"
-        class="hover:scale-125 hover:opacity-70 transition inline-block"
-      >
-        <img src="./instagram.svg" loading="lazy" alt="Logo de Instagram" />
-      </a>
-    </li>
-    <li>
-      <a
-        class="hover:scale-125 hover:opacity-70 transition inline-block"
-        target="_blank"
-        rel="noopener"
-        href="https://x.com/infoLaVelada"
-      >
-        <img src="./x.svg" loading="lazy" alt="Logo de Twitter" />
-      </a>
-    </li>
-  </ul>
+<footer
+  class="mt-20 flex w-full flex-col place-items-center border-t-2 border-primary pb-20 pt-6 md:flex-row md:justify-between"
+>
+  <Typography
+    as="span"
+    variant="body"
+    color="neutral"
+    class:list={"text-center"}
+  >
+    &copy; {new Date().getFullYear()} La Velada del Año <span
+      aria-hidden="true"
+      class="hidden md:inline">|</span
+    ><br aria-hidden="true" class="block md:hidden" /> Todos los derechos reservados.
+  </Typography>
+  <span
+    aria-hidden="true"
+    class="mt-6 w-full border-t-2 border-primary pt-6 md:hidden"></span>
+
+  <nav>
+    <ul
+      class="flex flex-row items-center gap-x-6"
+      aria-label="redes sociales y botón para alternar tema"
+    >
+      <li>
+        <a
+          target="_blank"
+          rel="noopener"
+          aria-label="Instagram de la velada, se abrirá en una nueva pestaña"
+          href="https://www.instagram.com/infolavelada"
+          class="inline-block any-hover:scale-125 any-hover:opacity-70 motion-safe:transition"
+        >
+          <InstagramIcon
+            class="text-primary transition-colors duration-300 hover:text-accent"
+          />
+        </a>
+      </li>
+      <li>
+        <a
+          target="_blank"
+          rel="noopener"
+          aria-label="X de la velada, se abrirá en una nueva pestaña"
+          href="https://x.com/infoLaVelada"
+          class="inline-block any-hover:scale-125 any-hover:opacity-70 motion-safe:transition"
+        >
+          <XIcon
+            class="text-primary transition-colors duration-300 hover:text-accent"
+          />
+        </a>
+      </li>
+    </ul>
+  </nav>
 </footer>
