--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const { title } = Astro.props;
     --color-primary: #ddd;
     --color-secondary: #333;
 
-    --background-color: #101010;
+    --background-color: #141800;
     --color-accent: #d5ff00;
     --background-twitch: var(--color-twitch-ice);
 
@@ -74,7 +74,7 @@ const { title } = Astro.props;
 
   ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: theme("colors.primary");
+    background-color: theme("colors.accent");
     border: 2px solid transparent;
     background-clip: content-box;
   }
